home-cluster/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
  labels:
    app: invidious
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: invidious
    spec:
      containers:
        - image: quay.io/invidious/invidious:961cae2b9a1e1dd780e3f92d55bbc7381b39ffe1-arm64
          name: invidious
          readinessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/stats
              port: 3000
            periodSeconds: 5
            failureThreshold: 2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 192Mi
            limits:
              cpu: '2'
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: arm64
      tolerations:
        - key: samcday.com/cloud
          effect: NoExecute
      volumes:
        - name: config-template
          configMap:
            name: config
        - name: config
          emptyDir: {}
