home-cluster/invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: invidious
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: public-nginx
  rules:
  - host: invidious.samcday.com
    http:
      paths:
      - backend:
          service:
            name: invidious
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - invidious.samcday.com
    secretName: certificate
